Revision history for DBIx::Class

0.04999_06 2006-01-28 21:20:32
        - fix Storage/DBI (tried to load deprecated ::Exception component)

0.04999_05 2006-01-28 20:13:52
        - count will now work for grouped resultsets
        - added accessor => option to column_info to specify accessor name
        - added $schema->populate to load test data (similar to AR fixtures)
	- removed cdbi-t dependencies, only run tests if installed
	- Removed DBIx::Class::Exception
	- unified throw_exception stuff, using Carp::Clan
	- report query when sth generation fails.
        - multi-step prefetch!
        - inheritance fixes
        - test tweaks

0.04999_04 2006-01-24 21:48:21
        - more documentation improvements
        - add columns_info_for for vendor-specific column info (Zbigniew Lukasiak)
        - add SQL::Translator::Producer for DBIx::Class table classes (Jess Robinson)
        - add unique constraint declaration (Daniel Westermann-Clark)
        - add new update_or_create method (Daniel Westermann-Clark)
        - rename ResultSetInstance class to ResultSetProxy, ResultSourceInstance
          to ResultSourceProxy, and TableInstance to ResultSourceProxy::Table
        - minor fixes to UUIDColumns
        - add debugfh method and ENV magic for tracing SQL (Nigel Metheringham)

0.04999_03 2006-01-20 06:05:27
        - imported Jess Robinson's SQL::Translator::Parser::DBIx::Class
        - lots of internals cleanup to eliminate result_source_instance requirement
        - added register_column and register_relationship class APIs
        - made Storage::DBI use prepare_cached safely (thanks to Tim Bunce)
        - many documentation improvements (thanks guys!)
        - added ->connection, ->connect, ->register_source and ->clone schema methods
	- Use croak instead of die for user errors.

0.04999_02 2006-01-14 07:17:35
        - Schema is now self-contained; no requirement for co-operation